added in frontend login/reg

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="wdi-project-4-client">
   <head>
     <meta charset="utf-8">
     <title>Angular Stack Setup</title>
