--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html ng-app="wdi-project-4-client">
-  <head>
-    <meta charset="utf-8">
-    <title>Angular Stack Setup</title>
-    <!-- inject:js -->
-    <!-- endinject -->
-    <!-- inject:css -->
-    <!-- endinject -->
-  </head>
-  <body>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Angular Stack Setup</title>
+  <base href="/" />
+  <!-- inject:js -->
+  <!-- endinject -->
+  <!-- inject:css -->
+  <!-- endinject -->
+</head>
+<body ng-controller="MainCtrl as main">
+  <header>
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" ui-sref="home">LoveOnTheLine</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li ng-show="main.user">
+              <p class="navbar-text">Welcome, {{ main.user.username }}</p>
+            </li>
+            <li ng-hide="main.user">
+              <a ui-sref="register">Register</a>
+            </li>
+            <li ng-hide="main.user">
+              <a ui-sref="login">Login</a>
+            </li>
+            <li ng-show="main.user">
+              <a ui-sref="usersIndex">Users</a>
+            </li>
+            <li ng-show="main.user">
+              <a ng-click="main.logout()">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="container" ui-view></main>
+</body>
 </html>
