--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="wdi-project-4-client">
 <head>
   <meta charset="utf-8">
-  <title>Angular Stack Setup</title>
+  <title>Drag Me</title>
   <base href="/" />
   <!-- inject:js -->
   <!-- endinject -->
