--- a/src/index.html
+++ b/src/index.html
@@ -11,39 +11,54 @@
 </head>
 <body ng-controller="MainCtrl as main">
   <header>
-    <nav class="navbar">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" ui-sref="home">LoveOnTheLine</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li ng-show="main.user">
-              <p class="navbar-text">Welcome, {{ main.user.username }}</p>
-            </li>
-            <li ng-hide="main.user">
-              <a ui-sref="register">Register</a>
-            </li>
-            <li ng-hide="main.user">
-              <a ui-sref="login">Login</a>
-            </li>
-            <li ng-show="main.user">
-              <a ui-sref="usersIndex">Users</a>
-            </li>
-            <li ng-show="main.user">
-              <a ng-click="main.logout()">Logout</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <img class="navImage" src="images/nav-image.png">
+    <img class="navRupaul" src="images/rupaul_nav_image.png">
+    <img class="mainLogo" src="images/main-logo.png">
+    <div class="navline"></div>
+
   </header>
   <main class="container" ui-view></main>
+  <footer>
+    <ul>
+      <li> <img class="socialMediaBtn" src="images/facebook.png"></li>
+      <li> <img class="socialMediaBtn" src="images/twitter.png"></li>
+      <li> <img class="socialMediaBtn" src="images/instagram.png"></li>
+      <li class="copyRight">&copy dragme.com</li>
+    </ul>
+  </footer>
 </body>
 </html>
+
+
+<!-- <nav class="navbar">
+<div class="container">
+<div class="navbar-header">
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<a class="navbar-brand" ui-sref="home">LoveOnTheLine</a>
+</div>
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+<ul class="nav navbar-nav navbar-right">
+<li ng-show="main.user">
+<p class="navbar-text">Welcome, {{ main.user.username }}</p>
+</li>
+<li ng-hide="main.user">
+<a ui-sref="register">Register</a>
+</li>
+<li ng-hide="main.user">
+<a ui-sref="login">Login</a>
+</li>
+<li ng-show="main.user">
+<a ui-sref="usersIndex">Users</a>
+</li>
+<li ng-show="main.user">
+<a ng-click="main.logout()">Logout</a>
+</li>
+</ul>
+</div>
+</div>
+</nav> -->
