loads of styling

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
   <header>
     <img class="navImage" src="images/nav-image.png">
     <img class="navRupaul" src="images/rupaul_nav_image.png">
-    <img class="mainLogo" src="images/main-logo.png">
-    <div class="navline"></div>
+    <img class="mainLogo" src="images/main-logo.png"><a href="home"></a>
+    <div class="navline"><h4 class="menuNav">Menu</h4></div>
 
   </header>
   <main class="container" ui-view></main>
