--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body ng-controller="MainCtrl as main">
   <header>
     <img class="navImage" src="images/nav-image.png">
-    <img class="navRupaul" src="images/rupaul_nav_image.png">
+    <img class="navRupaul" src="images/rupaul_nav_image.png"><a ui-sref="home"></a>
     <img class="mainLogo" src="images/main-logo.png"><a href="home"></a>
     <div class="navline"><h4 class="menuNav">Menu</h4></div>
 
