--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html ng-app="wdi-project-4-client">
 <head>
   <meta charset="utf-8">
-  <title>Drag Me</title>
+  <title>Drag Race</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <base href="/" />
   <!-- inject:js -->
   <!-- endinject -->
@@ -14,7 +15,7 @@
     <img class="navImage" src="images/nav-image.png">
     <img class="navRupaul" src="images/rupaul_nav_image.png"><a ui-sref="home"></a>
     <img class="mainLogo" src="images/main-logo.png"><a href="home"></a>
-    <div class="navline"><h4 class="menuNav">Menu</h4></div>
+    <div class="navline"><h4 class="menuNav"></h4></div>
 
   </header>
   <main class="container" ui-view></main>
