more parallax styling

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
   <main class="container" ui-view></main>
   <footer>
     <ul>
-      <!-- <li> <img class="socialMediaBtn" src="images/facebook.png"></li>
+      <li> <img class="socialMediaBtn" src="images/facebook.png"></li>
       <li> <img class="socialMediaBtn" src="images/twitter.png"></li>
       <li> <img class="socialMediaBtn" src="images/instagram.png"></li>
-      <li class="copyRight">&copy dragme.com</li> -->
+      <li class="copyRight">&copy dragme.com</li>
     </ul>
   </footer>
 </body>
