adding video to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,21 @@
   <!-- endinject -->
 </head>
 <body ng-controller="MainCtrl as main">
-  <header>
+  <!-- <header>
     <img class="navImage" src="images/nav-image.png">
     <img class="navRupaul" src="images/rupaul_nav_image.png"><a ui-sref="home"></a>
     <img class="mainLogo" src="images/main-logo.png"><a href="home"></a>
     <div class="navline"><h4 class="menuNav"></h4></div>
-
-  </header>
+  </header> -->
   <main class="container" ui-view></main>
-  <footer>
+  <!-- <footer>
     <ul>
       <li> <img class="socialMediaBtn" src="images/facebook.png"></li>
       <li> <img class="socialMediaBtn" src="images/twitter.png"></li>
       <li> <img class="socialMediaBtn" src="images/instagram.png"></li>
       <li class="copyRight">&copy dragme.com</li>
     </ul>
-  </footer>
+  </footer> -->
 </body>
 </html>
 
