adding images and rearranging

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 <body ng-controller="MainCtrl as main">
   <header>
     <img class="navImage" src="images/nav-image.png">
-    <img class="navRupaul" src="images/rupaul_nav_image.png"><a ui-sref="home"></a>
-    <img class="mainLogo" src="images/main-logo.png"><a href="home"></a>
+    <img class="navRupaul" src="images/rupaul_nav_image.png">
+    <img class="mainLogo" src="images/main-logo.png">
     <div class="navline"><h4 class="menuNav"></h4></div>
   </header>
   <main class="container" ui-view></main>
