making link black

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
       <li> <img class="socialMediaBtn" src="images/facebook.png"></li>
       <li> <img class="socialMediaBtn" src="images/twitter.png"></li>
       <li> <img class="socialMediaBtn" src="images/instagram.png"></li>
-      <li class="copyRight">&copy dragme.com</li>
+      <li class="copyRight">&copy; dragme.com</li>
+      <li class="copyRight" ng-if="main.user"><a ng-click="main.logout()">Logout</a></li>
     </ul>
   </footer>
 </body>
